Screen overflow corrected

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
   font-family: 'Orbitron', sans-serif;
   font-size: 3rem;
   color: #101010;
+  overflow: hidden;
 
   background-color: #50bb50;
   border-radius: 8px;
